--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <body>
     <h1>UCB twitter</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" />
+    <form id="post-form">
+      <label for="titulo-post">Titulo del post:</label>
+      <input type="text" id="titulo-post" />
+      <label for="detalle-post">Detalle:</label>
+      <input type="text" id="detalle-post" />
+      <input type="submit" value="Publicar" />
     </form>
     <div id="resultado-div"></div>
 
